Fixed category picture alignment to the left

--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,6 @@
   margin: auto;
   margin-top:20px;
   width: 90%;
-  justify-content: center;
-  align-items: center;
 }
 
 .reddit_data{
